# placeparse

./: .gitignore  placeparse.py  pyproject.toml
output/: 303_in_the_cut.json  375_chicken_n_fries.json  adels_famous_halal_food.json  akino.json  alabaster_bookshop.json  allantico_vinaio.json  amagees_jamaican_cuisine.json  amor_y_amargo.json  ando_patisserie.json  appas_pizza.json  ariari.json  atomix.json  b__b.json  ba_xuyn.json  barkada_social_club.json  beacon.json  bengal_tiger.json  berimbau_brazilian_kitchen_-_west_village.json  bernies.json  bigoi_venezia.json  boris__horton.json  brodo_-_east_village.json  bunlicious.json  bushwick.json  c_as_in_charlie.json  cafe_2by2.json  cafe_w__bakery__dessert.json  caravan_chicken.json  casa_adela.json  cask_bar__kitchen.json  cat_cafe_mocha_lounge_shibuya_koen-dori_store.json  cauldron_chicken.json  chalong_nyc.json  charles_pan-fried_chicken.json  chavelas.json  cheli_manhattan_.json  chili.json  china_palace_restaurant.json  chubby_skewers.json  churrascaria_plataforma.json  (+199 more)
output/restaraunt_data/: 1_golden_pancake.json  2_bros_pizza.json  969_nyc_coffee.json  abuqir.json  ad_hoc__coffee__shoppe.json  allantico_vinaio.json  amagees_jamaican_cuisine.json  angel.json  arepa_lady_astoria.json  ariari.json  aroma_latin_american_cocina.json  atomix.json  bigoi_venezia.json  birria_les_saint_marks_place.json  blue_corn_cafe.json  bonjour_banh_mi__tea.json  boris__horton.json  broad_nosh_bagels_deli__catering_58th_street.json  brooklyn_ball_factory.json  bullocks_bar-b-cue.json  bund_dumpling_house.json  c_as_in_charlie.json  (+158 more)
