[project]
name = "placeparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "googlemaps>=4.10.0",
    "prettytable>=3.16.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
